[gd_scene load_steps=26 format=3 uid="uid://rcd0gc5l0aq"]

[ext_resource type="Script" path="res://summoning_interface.gd" id="1_1v5vp"]
[ext_resource type="Shader" path="res://starfield.gdshader" id="2_1f147"]
[ext_resource type="Texture2D" uid="uid://c1hg4c4avd2jt" path="res://sprites/rest_areas/summoning_bright.png" id="2_03vbh"]
[ext_resource type="Texture2D" uid="uid://c2nrnh8oy5lnv" path="res://sprites/rest_areas/summoning_placeholder.png" id="3_0oajw"]
[ext_resource type="Texture2D" uid="uid://n6ka0fggvkt4" path="res://sprites/tablets/tabletblank.png" id="4_twry4"]
[ext_resource type="Theme" uid="uid://bmmvgk0k1x4au" path="res://basictheme.tres" id="5_ixdwh"]
[ext_resource type="Shader" path="res://take 2.gdshader" id="6_io3ll"]
[ext_resource type="AudioStream" uid="uid://xvxamf73yu7y" path="res://sfx/kltinop.mp3" id="8_ud8ok"]
[ext_resource type="AudioStream" uid="uid://ceaavw33v78cl" path="res://sfx/jingle2.mp3" id="8_ur2xl"]
[ext_resource type="AudioStream" uid="uid://bd7ytyc8n3ywt" path="res://sfx/loud-thunder-192165.mp3" id="9_3at0p"]
[ext_resource type="Shader" path="res://lightning_bolt.gdshader" id="10_20ouw"]
[ext_resource type="AudioStream" uid="uid://byj8q8u6xvjd6" path="res://sfx/rising_woosh.mp3" id="11_4ow5i"]
[ext_resource type="Texture2D" uid="uid://dyi15iyppmtof" path="res://sprites/placeholder/placeholder_lightning_strike.png" id="12_hrhgy"]
[ext_resource type="Texture2D" uid="uid://bmc4c2yrgjd8v" path="res://sprites/tablets/tablet_blank.png" id="14_gnbjp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ab5up"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jgf6r"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jpf2u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0oajw")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_mk241"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ojs2o"]
width = 1006
noise = SubResource("FastNoiseLite_mk241")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w07w3"]
shader = ExtResource("6_io3ll")
shader_parameter/line_color_a = Color(1, 1, 1, 1)
shader_parameter/line_color_b = Color(0.0385689, 3.86249e-06, 0.234269, 1)
shader_parameter/line_threshold = 0.8
shader_parameter/inverse_speed = 100.0
shader_parameter/line_length = 1000.0
shader_parameter/angle = 90.0
shader_parameter/noise = SubResource("NoiseTexture2D_ojs2o")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5s0pb"]
seed = 105
frequency = 0.0194

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ufd41"]
noise = SubResource("FastNoiseLite_5s0pb")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w25t3"]
shader = ExtResource("2_1f147")
shader_parameter/zoom = 19.8
shader_parameter/NUM_LAYERS = 7.0
shader_parameter/brightness1 = 0.6
shader_parameter/brightness2 = -2.6
shader_parameter/brightness3 = 1.2
shader_parameter/twinkle = 4.085
shader_parameter/star_rays = 1.0
shader_parameter/speed = 5.1
shader_parameter/color1 = Vector3(0, 0, 0)
shader_parameter/color2 = Vector3(0.303, 0.388, 0.273)
shader_parameter/color3 = Vector3(1.763, 0.938, 0.787)
shader_parameter/color4 = Vector3(-2.397, 1.818, 1.948)
shader_parameter/adjust_queue = Vector2(123.34, 456.821)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3xqoq"]
shader = ExtResource("10_20ouw")
shader_parameter/lightning_color = Vector4(0.16, 0, 0, 0)
shader_parameter/size = 0.258
shader_parameter/width = 0.348
shader_parameter/speed = 0.96
shader_parameter/cycle = 1.74
shader_parameter/ratio = null
shader_parameter/time_shift = null

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_adxyn"]

[node name="summoning_interface" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1v5vp")

[node name="ground" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ab5up")
layout_mode = 0
offset_top = 178.0
offset_right = 639.0
offset_bottom = 364.0
mouse_filter = 2
color = Color(0.196196, 0.252803, 0.229099, 1)

[node name="pillars" type="AnimatedSprite2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_jgf6r")
position = Vector2(360, 180)
sprite_frames = SubResource("SpriteFrames_jpf2u")
animation = &"normal"
metadata/_edit_group_ = true

[node name="left" type="TextureButton" parent="pillars"]
z_index = 2
offset_left = -217.0
offset_top = 64.0
offset_right = -177.0
offset_bottom = 104.0

[node name="top" type="TextureButton" parent="pillars"]
z_index = 2
offset_left = -58.0
offset_top = -109.0
offset_right = -18.0
offset_bottom = -69.0

[node name="center" type="TextureButton" parent="pillars"]
z_index = 2
offset_left = -55.0
offset_top = 72.0
offset_right = -15.0
offset_bottom = 112.0

[node name="right" type="TextureButton" parent="pillars"]
z_index = 2
offset_left = 128.0
offset_top = 69.0
offset_right = 168.0
offset_bottom = 109.0

[node name="pillars_bright" type="Sprite2D" parent="pillars"]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("2_03vbh")

[node name="back_button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 56.0
offset_bottom = 17.0
texture_normal = ExtResource("4_twry4")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="back_button"]
layout_mode = 0
offset_left = 5.0
offset_top = -4.0
offset_right = 45.0
offset_bottom = 19.0
theme_override_font_sizes/font_size = 8
text = "go back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="actiontext" type="Label" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 322.0
offset_right = 622.0
offset_bottom = 357.0
theme = ExtResource("5_ixdwh")
theme_override_font_sizes/font_size = 18
text = "meowehfkshfkjsadhfkjhasklhdkaldhkashdaskldhaskldhaskljdhsalkdhaskljdhkajsl"
horizontal_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(321, 179)

[node name="motion_lines" type="TextureRect" parent="Camera2D"]
visible = false
material = SubResource("ShaderMaterial_w07w3")
offset_left = -322.0
offset_top = -230.0
offset_right = 318.0
offset_bottom = 282.0
mouse_filter = 2
texture = SubResource("NoiseTexture2D_ufd41")

[node name="tablet_placeholder" type="Sprite2D" parent="Camera2D"]
z_index = 1
position = Vector2(-3, 72)
scale = Vector2(0.25, 0.25)
texture = ExtResource("14_gnbjp")

[node name="space" type="ColorRect" parent="."]
z_index = -1
material = SubResource("ShaderMaterial_w25t3")
offset_left = -5.0
offset_top = -1682.0
offset_right = 1813.0
offset_bottom = 400.0

[node name="jingle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ur2xl")
volume_db = -5.0

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ud8ok")

[node name="thunder" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_3at0p")
volume_db = -10.0

[node name="rising_woosh" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_4ow5i")
volume_db = -15.0

[node name="test" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_3xqoq")
position = Vector2(198.25, 93.25)
scale = Vector2(397.5, 187.5)
texture = SubResource("PlaceholderTexture2D_adxyn")

[node name="lightning_bolt" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 1
position = Vector2(335, -50)
scale = Vector2(0.803077, 1)
texture = ExtResource("12_hrhgy")

[connection signal="mouse_entered" from="pillars/left" to="." method="_on_left_mouse_entered"]
[connection signal="mouse_entered" from="pillars/left" to="." method="_on_slot_mouse_entered"]
[connection signal="mouse_entered" from="pillars/top" to="." method="_on_top_mouse_entered"]
[connection signal="mouse_entered" from="pillars/top" to="." method="_on_slot_mouse_entered"]
[connection signal="mouse_entered" from="pillars/center" to="." method="_on_center_mouse_entered"]
[connection signal="mouse_entered" from="pillars/center" to="." method="_on_slot_mouse_entered"]
[connection signal="mouse_entered" from="pillars/right" to="." method="_on_right_mouse_entered"]
[connection signal="mouse_entered" from="pillars/right" to="." method="_on_slot_mouse_entered"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
